syntax = "proto3";

package p2p_proto;

service PeerService {
    rpc GetPeers(GetPeersRequest) returns (GetPeersResponse);
}

message GetPeersRequest {
}

message Attribute {
    string Key = 1;
    string Value = 2;
}

message Peer {
    string Address = 1;
    repeated Attribute Attributes = 2;
    string State = 3;
}
message GetPeersResponse {
    repeated Peer Peers = 1;
}